--- a/docs/site.css
+++ b/docs/site.css
@@ -5799,6 +5799,12 @@ a.wordpress {
   font-size: 0.75rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem; }
+
+/*
+ * form
+ */
+iframe {
+  max-width: 100% !important; }
 /*!
  * animate.css -http://daneden.me/animate
  * Version - 3.5.1
